--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
+    "cli-table3": "^0.6.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4"
-  },
-  "dependencies": {
-    "bignumber.js": "^9.0.2"
   }
 }
