--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4"
   },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
-  }
+  "dependencies": {}
 }
