--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0"
   }
 }
