Added price bot

--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
     "cli-table3": "^0.6.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.20",
-    "@openzeppelin/test-helpers": "^0.5.15"
+    "solidity-coverage": "^0.7.20"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "@alch/alchemy-web3": "^1.4.2",
+    "bignumber.js": "^9.0.2",
+    "dotenv": "^16.0.0",
+    "node-cron": "^3.0.0"
   }
 }
