--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "chai": "^4.3.6",
     "cli-table3": "^0.6.1",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
+    "ethers": "^5.6.6",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.7.20"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "bignumber.js": "^9.0.2",
     "dotenv": "^16.0.0",
     "node-cron": "^3.0.0"
