--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "bignumber.js": "^9.0.2",
     "dotenv": "^16.0.0",
     "node-cron": "^3.0.0"
+  },
+  "scripts": {
+    "fork-fuji": "npx hardhat node --fork https://api.avax-test.network/ext/bc/C/rpc"
   }
 }
