--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "fork-fuji": "npx hardhat node --fork https://api.avax-test.network/ext/bc/C/rpc",
-    "localhost-deploy-2": "npx hardhat run --network localhost scripts/deploy-2.js"
+    "localhost-deploy-dev": "npx hardhat run --network localhost scripts/deploy-dev.js",
+    "localhost-deploy-main": "npx hardhat run --network localhost scripts/deploy-main.js"
   }
 }
