--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,17 @@
-INFURA_ID=
-
 DEPLOYER_PUBLIC_KEY=
 DEPLOYER_PRIVATE_KEY=
 
+TREASURY_WALLET_PRIVATE_KEY=
+TREASURY_WALLET_PRIVATE_KEY=
+
+DONATIONS_WALLET_PRIVATE_KEY=
+DONATIONS_WALLET_PRIVATE_KEY=
+
 TEAM_WALLET_PUBLIC_KEY=
 TEAM_WALLET_PRIVATE_KEY=
+
+VAULT_PRIVATE_KEY=
+VAULT_PRIVATE_KEY=
+
+REWARD_POOL_PRIVATE_KEY=
+REWARD_POOL_PRIVATE_KEY=
