--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
-node_modules
-.env
-coverage
+# directories
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/dist
+**/node_modules
+
+# files
+*.env
+*.log
+.pnp.*
 coverage.json
-typechain
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-#Hardhat files
-cache
-artifacts
-
-# System-specific
+# system-specific
 .DS_Store
+.idea/*
+
+# Docs
+docs
