--- a/package.json
+++ b/package.json
@@ -1,30 +1,81 @@
 {
-  "name": "hardhat-project",
+  "name": "defo-contract",
+  "description": "Decentralized Foundation Protocol Smart Contracts",
+  "verion": "0.1.0",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@ethersproject/abi": "^5.6.4",
+    "@ethersproject/abstract-signer": "^5.6.2",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/providers": "^5.6.8",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.1",
+    "@types/chalk": "^2.2.0",
+    "@types/debug": "^4.1.7",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "chai": "^4.3.6",
+    "chalk": "^5.0.1",
     "cli-table3": "^0.6.1",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "hardhat": "^2.8.4",
+    "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "3.3.0",
+    "debug": "^4.3.4",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.9.9",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.20"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "shelljs": "^0.8.5",
+    "shx": "^0.3.4",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.21",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^10.8.2",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
     "bignumber.js": "^9.0.2",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "node-cron": "^3.0.0"
   },
+  "files": [
+    "LICENSE",
+    "abis/**",
+    "artifacts/**",
+    "contracts/**"
+  ],
   "scripts": {
     "fork-fuji": "npx hardhat node --fork https://api.avax-test.network/ext/bc/C/rpc",
     "fork-mainnet": "npx hardhat node --fork https://api.avax.network/ext/bc/C/rpc",
     "test": "npx hardhat test test/node-diamond-test.js",
     "localhost-deploy-dev": "npx hardhat run --network localhost scripts/deploy-dev.js",
     "localhost-deploy-main": "npx hardhat run --network localhost scripts/deploy-main.js"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
