--- a/.env-example
+++ b/.env-example
@@ -20,17 +20,19 @@ REWARD_POOL_PRIVATE_KEY=35461a0fa3b799ac172a2258b8de3e01032580de4cfdb3928ac63791
 # Forking
 FORK_ENABLED=true
 
-# Forking testnet. Don't set to fork mainnet (default)
+# Forking testnet. Don't set or leave empty to fork mainnet
 FORK_TESTNET=
 
-# Solidity optimizations, don't set for debugging
-OPTIMIZER_DISABLED=
+# Solidity optimizations, don't enable for debugging
+OPTIMIZER_DISABLED=true
 
 HIDE_DEPLOY_LOG=false
 
 REPORT_GAS=false
 
+# For deployment verifications
 SNOWTRACE_API_KEY=
 
+# Leave empty for default avax urls
 MAINNET_RPC_URL=
 FUJI_RPC_URL=
