refactor: deployable with 'hardhat-deploy' support of the  EIP-2535 multi-facet proxy diamond

--- a/.env-example
+++ b/.env-example
@@ -26,7 +26,7 @@ FORK_TESTNET=
 # Solidity optimizations, don't enable for debugging
 OPTIMIZER_DISABLED=true
 
-HIDE_DEPLOY_LOG=false
+HIDE_DEPLOY_LOG=
 
 REPORT_GAS=false
 
