--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/providers": "^5.6.8",
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
@@ -97,23 +97,19 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "remove-logs": "yarn run hardhat remove-logs",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
-    "start-fork": "FORK_ENABLED=true hardhat node --no-reset --no-deploy",
-    "start-fork:fuji": "FORK_TESTNET=true yarn start-fork",
-    "deploy": "hardhat deploy --write true --network ",
-    "accounts": "hardhat --network localhost accounts",
-    "get-some-dai": "hardhat --network localhost fork:get-some-dai --amount 10",
+    "start-fork": "FORK_ENABLED=true hardhat node --no-deploy",
+    "deploy": "hardhat deploy --write true --network",
+    "accounts": "hardhat accounts --network localhost",
+    "deployments": "hardhat deployments --network localhost",
+    "get-some-dai": "hardhat --network localhost fork:get-some-dai --amount 1000",
     "mint-gems": "hardhat --network localhost fork:mint-some-gems --amount",
     "mint-some-gems": "yarn mint-gems 10",
     "jump-in-time": "hardhat --network localhost fork:jump-in-time --time",
     "jump-in-time-1y": "jump-in-time 1y",
     "run-fork": "yarn get-some-dai && yarn mint-some-gems && yarn jump-in-time-1y",
-    "run-fork:fuji": "FORK_TESTNET=true yarn run-fork",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat test",
-    "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network",
-    "integration-test-fuji": "yarn deploy fuji && hardhat run --network fuji ./scripts/createAndRunPrizePoolMumbai.ts ",
-    "parallel-test": "mocha --require hardhat/register --recursive --parallel --exit --extension ts",
-    "prepack": "rm -rf build cache && yarn compile"
+    "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
   },
   "config": {
     "commitizen": {
