dev: jump-in-time, get-some-defo, and get-some-dai minting scripts for any named account and amount

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.7",
     "@types/mocha": "^9.1.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.0.1",
     "@types/qrcode-terminal": "^0.12.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -49,6 +50,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "mocha": "^10.0.0",
+    "moment": "^2.29.4",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "qrcode-terminal": "^0.12.0",
@@ -85,11 +87,6 @@
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
     "coverage": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat coverage",
     "coverage:file": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat coverage --testfiles",
-    "fork-fuji": "npx hardhat node --fork https://api.avax-test.network/ext/bc/C/rpc",
-    "fork-mainnet": "npx hardhat node --fork https://api.avax.network/ext/bc/C/rpc",
-    "test-old": "npx hardhat unused/test test/node-diamond-test.js",
-    "localhost-deploy-dev": "npx hardhat run --network localhost unused/scripts/deploy-dev.js",
-    "localhost-deploy-main": "npx hardhat run --network localhost unused/scripts/deploy-main.js",
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yml --ignore-path ./.eslintignore --ext .js,.ts .",
@@ -101,12 +98,12 @@
     "deploy": "hardhat deploy --write true --network",
     "accounts": "hardhat accounts --network localhost",
     "deployments": "hardhat deployments --network localhost",
-    "get-some-dai": "hardhat --network localhost fork:get-some-dai --amount 10000",
-    "mint-gems": "hardhat --network localhost fork:mint-some-gems --amount",
-    "mint-some-gems": "yarn mint-gems 10",
-    "jump-in-time": "hardhat --network localhost fork:jump-in-time --time",
-    "jump-in-time-1y": "jump-in-time 1y",
-    "run-fork": "yarn get-some-dai && yarn mint-some-gems && yarn jump-in-time-1y",
+    "get-some-dai": "hardhat --network localhost fork:get-some-dai",
+    "get-some-defo": "hardhat --network localhost get-some-defo",
+    "mint-some-gems": "hardhat --network localhost mint-some-gems",
+    "jump-in-time": "hardhat --network localhost jump-in-time",
+    "permit": "hardhat --network localhost permit",
+    "run-fork": "yarn start-fork && yarn get-some-dai && yarn mint-some-gems && yarn jump-in-time && yarn permit",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat unused/test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat unused/test",
     "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
