--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "debug": "^4.3.4",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
+    "eth-permit": "^0.2.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "hardhat": "^2.9.9",
