--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "verion": "0.1.0",
   "main": "index.js",
   "devDependencies": {
+    "@1inch/permit-signed-approvals-utils": "^1.4.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ethersproject/abi": "^5.6.4",
@@ -23,12 +24,14 @@
     "@types/chai": "^4.3.1",
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.7",
+    "@types/ethereumjs-util": "^6.1.0",
     "@types/mocha": "^9.1.1",
     "@types/moment": "^2.13.0",
     "@types/node": "^18.0.1",
     "@types/qrcode-terminal": "^0.12.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "add": "^2.0.6",
     "chai": "^4.3.6",
     "chalk": "4.1.2",
     "cli-table3": "^0.6.1",
@@ -40,6 +43,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eth-permit": "^0.2.1",
     "ethereum-waffle": "^3.4.4",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
     "hardhat": "^2.9.9",
     "hardhat-abi-exporter": "^2.10.0",
@@ -63,7 +67,8 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.8.2",
     "typechain": "^8.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "yarn": "^1.22.19"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.2",
