--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "mocha": "^10.0.0",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
@@ -109,7 +110,7 @@
     "mint-some-gems": "hardhat --network localhost mint-some-gems",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
-    "run-fork": "yarn start-fork && yarn get-some-dai && yarn mint-some-gems && yarn jump-in-time && yarn permit",
+    "run-fork": "yarn deploy localhost && yarn get-some-dai && yarn get-some-defo && yarn permit && yarn mint-some-gems && yarn jump-in-time && yarn accounts",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat unused/test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat unused/test",
     "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
