fix: gems balance query

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.7",
     "@types/ethereumjs-util": "^6.1.0",
+    "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.1",
     "@types/moment": "^2.13.0",
     "@types/node": "^18.0.1",
@@ -108,7 +109,7 @@
     "deployments": "hardhat deployments --network localhost",
     "get-some-dai": "hardhat --network localhost fork:get-some-dai",
     "get-some-defo": "hardhat --network localhost get-some-defo",
-    "mint-some-gems": "hardhat --network localhost mint-some-gems",
+    "get-some-gems": "hardhat --network localhost get-some-gems",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
     "run-fork": "yarn deploy localhost && yarn get-some-dai && yarn get-some-defo && yarn permit && yarn mint-some-gems && yarn jump-in-time && yarn gems && yarn accounts",
