--- a/package.json
+++ b/package.json
@@ -113,8 +113,8 @@
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
     "dev": "yarn permit && yarn get-some-gems && yarn jump-in-time && yarn gems && yarn accounts",
-    "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat unused/test",
-    "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat unused/test",
+    "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat test",
+    "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat test",
     "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
   },
   "config": {
