--- a/package.json
+++ b/package.json
@@ -105,11 +105,12 @@
     "start-fork": "yarn compile && FORK_ENABLED=true hardhat node",
     "deploy": "hardhat deploy --write true --network",
     "accounts": "hardhat accounts --network localhost",
-    "gems": "hardhat gems --network localhost",
+    "gems": "hardhat --network localhost gems",
     "deployments": "hardhat deployments --network localhost",
     "get-some-dai": "hardhat --network localhost fork:get-some-dai",
     "get-some-defo": "hardhat --network localhost get-some-defo",
     "get-some-gems": "hardhat --network localhost get-some-gems",
+    "claim": "hardhat --network localhost claim",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
     "dev": "yarn permit && yarn get-some-gems && yarn jump-in-time && yarn gems && yarn accounts",
