--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "qrcode-terminal": "^0.12.0",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "solhint": "^3.3.7",
@@ -110,10 +109,11 @@
     "get-some-dai": "hardhat --network localhost fork:get-some-dai",
     "get-some-defo": "hardhat --network localhost get-some-defo",
     "get-some-gems": "hardhat --network localhost get-some-gems",
+    "mint-some-gems": "yarn get-some-gems",
     "claim": "hardhat --network localhost claim",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
-    "dev": "yarn permit && yarn get-some-gems && yarn jump-in-time && yarn gems && yarn accounts",
+    "dev": "yarn permit && yarn get-some-gems && yarn gems && yarn accounts",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat test",
     "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
