--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "es6"
-    ],
+    "lib": ["es6"],
     "moduleResolution": "node",
     "noImplicitAny": true,
     "removeComments": true,
@@ -17,30 +15,11 @@
     "strict": true,
     "target": "es2017"
   },
-  "exclude": [
-    "node_modules",
-    "unused/**/*"
-  ],
-  "files": [
-    "./hardhat.config.ts",
-    "./hardhat.network.ts",
-    "./hardhat.accounts.ts",
-    "./constants/addresses.ts"
-  ],
-  "include": [
-    "types/**/*",
-    "test/**/*",
-    "tasks/**/*",
-    "deploy/**/*",
-    "utils/**/*",
-    "constants/**/*"
-  ],
+  "exclude": ["node_modules", "unused/**/*"],
+  "files": ["./hardhat.config.ts", "./hardhat.network.ts", "./hardhat.accounts.ts", "./constants/addresses.ts"],
+  "include": ["types/**/*", "test/**/*", "tasks/**/*", "deploy/**/*", "utils/**/*", "constants/**/*"],
   "paths": {
-    "@types/*": [
-      "types/*"
-    ],
-    "@utils/*": [
-      "utils/*"
-    ]
+    "@types/*": ["types/*"],
+    "@utils/*": ["utils/*"]
   }
 }
