dev: detailed reward stats on gems and claim

--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "claim": "hardhat --network localhost claim",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
-    "dev": "yarn permit && yarn get-some-gems && yarn jump-in-time --time 8d && yarn gems && yarn accounts",
+    "dev": "yarn permit && yarn get-some-gems && yarn jump-in-time --time 8d && yarn get-some-defo --account treasury --amount 1000 && yarn claim --id 0 && yarn gems && yarn accounts",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true hardhat test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat test",
     "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
