--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "verion": "0.1.0",
   "main": "index.js",
   "devDependencies": {
-    "@1inch/permit-signed-approvals-utils": "^1.4.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ethersproject/abi": "^5.6.4",
@@ -67,6 +66,7 @@
     "solidity-coverage": "^0.7.21",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.8.2",
+    "tsconfig-paths": "^4.0.0",
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
     "yarn": "^1.22.19"
