--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "claim": "hardhat --network localhost claim",
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
+    "vault": "hardhat --network localhost vault",
     "dev": "yarn get-some-dai && yarn get-some-defo && yarn permit && yarn get-some-gems && yarn jump-in-time --time 8d && yarn claim --id 0 && yarn gems && yarn accounts",
     "test": "HIDE_DEPLOY_LOG=true OPTIMIZER_DISABLED=true DEBUG='defo:*' hardhat test",
     "gas": "REPORT_GAS=true HIDE_DEPLOY_LOG=true hardhat test",
