--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "remove-logs": "yarn run hardhat remove-logs",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
-    "start-fork": "cross-env FORK_ENABLED=true yarn compile && hardhat node",
+    "start-fork": "cross-env FORK_ENABLED=true && yarn compile && hardhat node",
     "deploy": "hardhat deploy --write true --network",
     "accounts": "hardhat accounts --network localhost",
     "gems": "hardhat --network localhost gems",
