--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.21",
+    "solidity-docgen": "^0.6.0-beta.21",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0",
@@ -89,7 +90,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf ./artifacts ./deployments ./cache ./coverage ./types ./coverage.json && yarn typechain",
-    "docs": "solidity-docgen --solc-module solc-0.8 -i contracts -o docs -t templates",
+    "docs": "hardhat docgen",
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
     "coverage": "cross-env HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true OPTIMIZER_DISABLED=true hardhat coverage",
