--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "jump-in-time": "hardhat --network localhost jump-in-time",
     "permit": "hardhat --network localhost permit",
     "vault": "hardhat --network localhost vault",
+    "history": "hardhat --network localhost history --time 7days",
     "dev": "yarn get-some-dai && yarn get-some-defo && yarn permit && yarn get-some-gems && yarn jump-in-time --time 8d && yarn claim --id 0 && yarn vault --id 2 --amount 5 && yarn gems && yarn accounts",
     "test": "cross-env HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true OPTIMIZER_DISABLED=true DEBUG='defo:*' hardhat test",
     "gas": "cross-env REPORT_GAS=true HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true hardhat test",
