--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "mocha": "^10.0.0",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "solhint": "^3.3.7",
