--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ethersproject/bignumber": "^5.6.2",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/providers": "^5.6.8",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
@@ -91,6 +91,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf ./artifacts ./deployments ./cache ./coverage ./types ./coverage.json && yarn typechain",
+    "abi": "yarn hardhat abi",
     "docs": "hardhat docgen",
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
