--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/debug": "^4.1.7",
     "@types/ethereumjs-util": "^6.1.0",
     "@types/lodash": "^4.14.182",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/mocha": "^9.1.1",
     "@types/moment": "^2.13.0",
     "@types/node": "^18.0.1",
@@ -56,6 +57,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
     "mocha": "^10.0.0",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
