--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,12 +8,14 @@ parserOptions:
   project: "tsconfig.json"
 plugins:
   - "@typescript-eslint"
+  - "unused-imports"
 root: true
 rules:
   "@typescript-eslint/no-floating-promises":
     - error
     - ignoreIIFE: true
       ignoreVoid: true
+  "unused-imports/no-unused-imports": error
   "@typescript-eslint/no-inferrable-types": "off"
   "@typescript-eslint/no-unused-vars":
     - error
