--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "hardhat": "^2.9.9",
     "hardhat-abi-exporter": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
-    "hardhat-deploy": "^0.11.11",
+    "hardhat-deploy": "0.11.11",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-erc1820": "^0.1.0",
     "hardhat-ethernal": "^1.0.0",
