dev:  add yarn console script, add network selection to yarn accounts

--- a/package.json
+++ b/package.json
@@ -110,8 +110,9 @@
     "remove-logs": "yarn run hardhat remove-logs",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
     "start-fork": "cross-env FORK_ENABLED=true && yarn compile && hardhat node --network hardhat",
+    "console": "hardhat console --network ",
     "deploy": "hardhat deploy --write true --network",
-    "accounts": "hardhat accounts --network localhost",
+    "accounts": "hardhat accounts --network ",
     "gems": "hardhat --network localhost gems",
     "deployments": "hardhat deployments --network localhost",
     "get-some-dai": "hardhat --network localhost dev:get-some-dai",
