ci:  test coverage fix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Build contracts and types
         run: yarn typechain
       - name: Coverage
-        run: yarn test
+        run: yarn coverage
