--- a/package.json
+++ b/package.json
@@ -111,24 +111,25 @@
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
     "start-fork": "cross-env FORK_ENABLED=true && yarn compile && hardhat node --network hardhat",
     "console": "hardhat console --network ",
-    "deploy": "hardhat deploy --write true --network",
+    "deploy": "hardhat deploy --write true --network ",
+    "conf": "hardhat config --network ",
     "accounts": "hardhat accounts --network ",
-    "gems": "hardhat --network localhost gems",
-    "deployments": "hardhat deployments --network localhost",
-    "get-some-dai": "hardhat --network localhost dev:get-some-dai",
-    "get-some-defo": "hardhat --network localhost get-some-defo",
-    "get-some-gems": "hardhat --network localhost get-some-gems",
+    "gems": "hardhat gems --network ",
+    "deployments": "hardhat deployments --network ",
+    "get-some-dai": "hardhat get-some-dai --network ",
+    "get-some-defo": "hardhat get-some-defo --network ",
+    "get-some-gems": "hardhat get-some-gems  --network ",
     "mint-some-gems": "yarn get-some-gems",
-    "claim": "hardhat --network localhost claim",
+    "claim": "hardhat claim --network ",
+    "permit": "hardhat permit --network ",
+    "vault": "hardhat vault --network ",
+    "liquidity": "hardhat liquidity --network ",
     "jump-in-time": "hardhat --network localhost jump-in-time",
-    "permit": "hardhat --network localhost permit",
-    "vault": "hardhat --network localhost vault",
-    "add-liquidity": "hardhat --network localhost add-liquidity",
-    "history": "hardhat --network localhost history --time 7days",
-    "dev": "yarn get-some-dai && yarn get-some-defo && yarn permit && yarn get-some-gems && yarn jump-in-time --time 8d && yarn claim --id 0 && yarn vault --op stake --id 1 --amount 1 && yarn vault --op stake --id 2 --amount 5 && yarn vault --op unstake --id 2 --amount 4.75 && yarn gems && yarn accounts",
+    "history": "hardhat history --time 7days --network ",
+    "dev": "cross-env HIDE_SHOW_NETWORK=true yarn get-some-dai localhost && yarn get-some-defo localhost && yarn permit localhost && yarn get-some-gems localhost && yarn jump-in-time --time 8d && yarn claim localhost --id 0 && yarn vault localhost --op stake --id 1 --amount 1 && yarn vault localhost --op stake --id 2 --amount 5 && yarn vault localhost --op unstake --id 2 --amount 4.75 && yarn gems localhost && yarn accounts localhost ",
     "test": "cross-env HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true OPTIMIZER_DISABLED=true DEBUG='defo:*' hardhat test",
     "gas": "cross-env REPORT_GAS=true HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true hardhat test",
-    "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network"
+    "verify": "hardhat etherscan-verify --license GPL-3.0 --solc-input --network "
   },
   "config": {
     "commitizen": {
