--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
-    "hardhat": "^2.9.9",
+    "hardhat": "2.10.2",
     "hardhat-abi-exporter": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "0.11.11",
