fix:  defo token linked diamond getter

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
     "hardhat": "2.10.2",
-    "hardhat-abi-exporter": "^2.10.0",
+    "hardhat-abi-exporter": "^y2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "0.11.11",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
@@ -100,6 +100,7 @@
     "docs": "hardhat docgen",
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
+    "build": "yarn compile",
     "coverage": "cross-env HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true OPTIMIZER_DISABLED=true hardhat coverage --network hardhat",
     "coverage:file": "cross-env HIDE_DEPLOY_LOG=true HIDE_TASK_LOG=true OPTIMIZER_DISABLED=true hardhat coverage --testfiles",
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
