--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
+    "exceljs": "^4.3.0",
     "hardhat": "2.10.2",
     "hardhat-abi-exporter": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
