--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "remove-logs": "yarn run hardhat remove-logs",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
-    "start-fork": "cross-env FORK_ENABLED=true && yarn compile && hardhat node --network hardhat",
+    "start-fork": "cross-env FORK_ENABLED=true && hardhat node --network hardhat",
     "console": "hardhat console --network",
     "deploy": "hardhat deploy --write true --network",
     "conf": "hardhat config --network",
